--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
   font-family: sans-serif;
   text-align: center;
 }
+.div-cara{
+  animation: frames 4s;
+}
+
+@keyframes frames {
+  0% {
+    width: 0;
+    height: 0;
+  }
+}
